<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/mainColor"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/emptyPlaceholder"
            android:textColor="#ffffff" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/goBackBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/emptyPlaceholder"
        android:src="@drawable/seleccionar_icon"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@id/composeViewContainer"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar" />

    <TextView
        android:id="@+id/centeredText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyPlaceholder"
        android:textColor="@color/mainColor"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintBottom_toTopOf="@id/composeViewContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/composeViewContainer"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/goBackBtn" />

    <TableLayout
        android:id="@+id/layoutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/composeViewContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableRow>
            <TextView
                android:id="@+id/textTempAvg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:textColor="@color/mainColor"
                android:text="@string/tempAvg" />

            <TextView
                android:id="@+id/textTempAvgValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:textColor="@color/mainColor"
                android:text="@string/emptyPlaceholder" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/textTempMin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:textColor="@color/mainColor"
                android:text="@string/tempMin" />

            <TextView
                android:id="@+id/textTempMinValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:textColor="@color/mainColor"
                android:text="@string/emptyPlaceholder" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/textTempMax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:textColor="@color/mainColor"
                android:text="@string/tempMax" />

            <TextView
                android:id="@+id/textTempMaxValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:textColor="@color/mainColor"
                android:text="@string/emptyPlaceholder" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/textStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:textColor="@color/mainColor"
                android:text="@string/startDate" />

            <TextView
                android:id="@+id/textStartDateValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:textColor="@color/mainColor"
                android:text="@string/emptyPlaceholder" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/textEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:textColor="@color/mainColor"
                android:text="@string/endDate" />

            <TextView
                android:id="@+id/textEndDateValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:textColor="@color/mainColor"
                android:text="@string/emptyPlaceholder" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/sensorsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensorsList"
        app:layout_constraintTop_toBottomOf="@id/layoutText"
        android:background="@drawable/btn_sensors_bg"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sensorsBtn">

        <Button
            android:id="@+id/pngDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/png_icon"
            android:textColor="@color/white"
            android:drawablePadding="5dp"
            android:text="@string/dwnldPng" />

        <Button
            android:id="@+id/excelDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/excel_icon"
            android:background="@drawable/btn_background"
            android:textColor="@color/mainColor"
            android:drawablePadding="8dp"
            android:text="@string/dwnldExcel" />

        <Button
            android:id="@+id/tbSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/subir_icon"
            android:background="@drawable/btn_background"
            android:textColor="@color/mainColor"
            android:drawablePadding="8dp"
            android:text="@string/upldData" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
